# bit

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
compiler/include/bit/: arena.h  ast.h  file.h  irgen.h  lexer.h  parser.h  sema.h  token.h
compiler/src/ast/: ast.c
compiler/src/irgen/: irgen.c
compiler/src/lex/: lexer.c  token.c
compiler/src/main/: main.c
compiler/src/parse/: parser.c
compiler/src/sema/: sema.c
compiler/src/support/: arena.c  file.c
compiler/tests/: run_golden_test.cmake  test_irgen.c  test_lexer.c  test_parser.c  test_sema.c
compiler/tests/fixtures/irgen/: function_call.bit  if_else_compare.bit  semantic_failure.bit  unary_negation.bit
compiler/tests/fixtures/lexer/: control_flow_tokens.bit  invalid_character.bit  valid_tokens.bit
compiler/tests/fixtures/parser/: if_else_bool.bit  missing_semicolon.bit  unary_precedence.bit
compiler/tests/fixtures/sema/: call_arity_error.bit  condition_type_error.bit  missing_return_path.bit  negative_i32_min.bit  negative_out_of_range.bit  unknown_function.bit  unknown_identifier.bit  valid_negation.bit
compiler/tests/golden/irgen/: arithmetic_precedence.ll  arithmetic_precedence.stdout  function_call.ll  if_else_compare.ll  semantic_failure.stderr  unary_negation.ll
compiler/tests/golden/lexer/: control_flow_tokens.stdout  invalid_character.stdout  valid_tokens.stdout
compiler/tests/golden/parser/: arithmetic_precedence.stdout  function_call.stdout  if_else_bool.stdout  missing_semicolon.stderr  unary_precedence.stdout
compiler/tests/golden/sema/: call_arity_error.stderr  condition_type_error.stderr  missing_return_path.stderr  negative_out_of_range.stderr  unknown_function.stderr  unknown_identifier.stderr  valid_negation.stdout
docs/: bootstrap-plan.md  ir-strategy.md  syntax.md  type-system.md
examples/: hello.bit
